<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0bcc6"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/image"
        android:src="@drawable/najbarajo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#d30c45"
        android:textSize="65sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/description"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="32sp"
        android:textStyle="italic" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="140dp"
        android:fontFamily="sans-serif-light"
        android:paddingEnd="35dp"
        android:paddingLeft="0dp"
        android:paddingRight="15dp"
        android:paddingStart="0dp"
        android:text="@string/street"
        android:textColor="#5b021b"
        android:textSize="19sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="115dp"
        android:fontFamily="sans-serif-light"
        android:paddingEnd="35dp"
        android:paddingLeft="0dp"
        android:paddingRight="15dp"
        android:paddingStart="0dp"
        android:text="@string/town"
        android:textColor="#5b021b"
        android:textSize="19sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="25dp"
        android:fontFamily="sans-serif-light"
        android:paddingEnd="35dp"
        android:paddingLeft="0dp"
        android:paddingRight="15dp"
        android:paddingStart="0dp"
        android:text="@string/phone"
        android:textColor="#d30c45"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/textView"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-light"
        android:paddingEnd="35dp"
        android:paddingLeft="0dp"
        android:paddingRight="15dp"
        android:paddingStart="0dp"
        android:text="@string/link"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic" />

</RelativeLayout>